mise à jour du fichier seed

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,4 +2,6 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - init: bundle install
+  - before: gem install rails
+    init: bundler install && psql -c "create role myapp with createdb login password 'password1';" && yarn install --check-files && rake db:setup && rails db:migrate && rails db:seed
+    command: pg_start
