Mise à jour Dockerfile 06/11/2020

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,10 @@
 image:
   file: .gitpod.Dockerfile
-
 tasks:
   - before: gem install rails
     init: bundler install && psql -c "create role myapp with createdb login password 'password1';" && yarn install --check-files && rake db:setup && rails db:migrate && rails db:seed
-    command: pg_start
+    command: rails s   
+vscode:
+  extensions:
+    - bajdzis.vscode-database@2.2.3:nBZ1zB8XJrPu5oCtaTFB+g==
+    - ms-ossdata.vscode-postgresql@0.3.0:xzL3x0jpFvN4+uvH4nREag==
