--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: gitpod
   password: 'password1'
+  aliases: true  # Ajout de l'option aliases: true
 
 development:
   <<: *default
@@ -83,3 +84,6 @@ test:
 production:
   <<: *default
   url: <%= ENV['DATABASE_URL'] %>
+#  database: <%= ENV['TCHOPMYGRINDS_DATABASE_NAME'] %>
+#  username: <%= ENV['TCHOPMYGRINDS_DATABASE_USERNAME'] %>
+#  password: <%= ENV['TCHOPMYGRINDS_DATABASE_PASSWORD'] %>
