--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 # Ignore application configuration
 /config/application.yml
 sendgrid.env
+node_modules/
+app/assets/builds/
+!app/assets/builds/.keep
