--- a/package.json
+++ b/package.json
@@ -1,14 +1,44 @@
 {
   "name": "tchopmygrinds",
+  "version": "2.0.0",
+  "description": "Marketplace moderne pour bananes plantain avec Tailwind CSS",
   "private": true,
   "scripts": {
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/tailwind.css -o ./app/assets/builds/tailwind.css --minify",
-    "watch:css": "tailwindcss -i ./app/assets/stylesheets/tailwind.css -o ./app/assets/builds/tailwind.css --watch"
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/tailwind.css --minify",
+    "watch:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/tailwind.css --watch",
+    "dev": "concurrently \"npm run watch:css\" \"rails server\"",
+    "build": "npm run build:css && rails assets:precompile"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.10",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10", 
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41"
-  }
+    "postcss": "^8.4.41",
+    "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "alpinejs": "^3.13.3"
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11"
+  ],
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "keywords": [
+    "marketplace",
+    "banane-plantain", 
+    "cameroun",
+    "ecommerce",
+    "geolocation",
+    "tailwindcss",
+    "rails",
+    "angularjs"
+  ],
+  "author": "TchopMyGrinds Team",
+  "license": "MIT"
 }
 
