--- a/package.json
+++ b/package.json
@@ -16,37 +16,37 @@
     "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.10",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10", 
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "concurrently": "^8.2.2",
-    "vite": "^6.0.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.7.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
-    "@types/leaflet": "^1.9.14",
-    "eslint": "^9.17.0",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
-    "prettier": "^3.4.2"
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
+    "eslint": "^9.17.0",
+    "postcss": "^8.4.41",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.5"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "alpinejs": "^3.13.3",
     "angular": "^1.8.3",
-    "angular-route": "^1.8.3",
     "angular-cookies": "^1.8.3",
+    "angular-route": "^1.8.3",
+    "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.1",
-    "@reduxjs/toolkit": "^2.4.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
-    "axios": "^1.7.9",
-    "react-leaflet": "^4.2.1"
+    "react-router-dom": "^6.28.1"
   },
   "browserslist": [
     "defaults",
@@ -57,7 +57,7 @@
   },
   "keywords": [
     "marketplace",
-    "banane-plantain", 
+    "banane-plantain",
     "cameroun",
     "ecommerce",
     "geolocation",
@@ -68,4 +68,3 @@
   "author": "TchopMyGrinds Team",
   "license": "MIT"
 }
-
