--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "angular-cookies": "^1.8.3",
     "angular-route": "^1.8.3",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.28.1"
+    "react-router-dom": "^6.28.1",
+    "tailwind-merge": "^3.3.1"
   },
   "browserslist": [
     "defaults",
