--- a/package.json
+++ b/package.json
@@ -13,13 +13,24 @@
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix"
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "test:e2e": "node test_e2e_ratings.js",
+    "test:api": "node test_api_ratings.js",
+    "test:ratings": "npm run test:api && npm run test:e2e",
+    "test:full": "node tests/test-runner.js",
+    "test:auth": "node tests/features/authentication.test.js",
+    "test:commerces": "node tests/features/commerces.test.js", 
+    "test:rating-system": "node tests/features/ratings.test.js",
+    "test:regression": "node tests/run-regression-tests.js",
+    "test:ci": "node tests/ci-pipeline.js",
+    "test:baseline": "node tests/run-regression-tests.js --update-baseline"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/leaflet": "^1.9.20",
+    "@types/puppeteer": "^7.0.4",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
@@ -30,6 +41,7 @@
     "eslint": "^9.17.0",
     "postcss": "^8.4.41",
     "prettier": "^3.4.2",
+    "puppeteer": "^24.16.2",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.7.3",
     "vite": "^6.0.5"
